--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <link href="stylesheets/style.css" rel="stylesheet">
+  <link href="stylesheets/vendor.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,8 +18,13 @@
 {{{body}}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
-
+  <script type="text/javascript" src="js/login.js"></script>
+  <script type="text/javascript" src="js/members.js"></script>
+  
+  <script type="text/javascript" src="js/winery.js"></script>
+  {{!-- <script type="text/javascript" src="js/script.js"></script> --}}
 </body>
 
 </html>
