--- a/views/winery.handlebars
+++ b/views/winery.handlebars
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome Winery <span class="member-name"></span></h2>
+        <h2>Welcome Winery <span class="winery-name"></span></h2>
         
       </div>
     </div>
@@ -44,3 +44,4 @@
 
     </div>
   </div>
+  <script type="text/javascript" src="js/winery.js"></script>
